# conf-comparison-tool

./: .envrc  .envrc.bak  .gitignore  DESIGN_THEME_ANALYSIS.md  LICENSE  MANIFEST.in  PRIVATE_SETUP.md  PUBLIC_SETUP.md  README.md  cisco_reset.py  commTest.py  command_manager.py  comparison_wrapper.py  directory_service.py  export_melbourne.py  file_utils.py  generate_results.py  grade_manager.py  grading_dedup.py  grading_rules.py  grading_utils.py  main.py  pyproject.toml  remote_utils.py  replug_usb_eth.py  requirements.txt  results_service.py  rubric_manager.py  scheme_manager.py  serial-utils.py  serial_utils.py  server.py  setup_and_grade.py  skilExamLogCollection.py  ssh_utils.py  template_service.py  test_reset.py  test_rubrics.py  testing.txt  testpull.txt  (+1 more)
ReadyforFurtherDev/: commands.json  main_cli.py  main_cli_test.py  serial_utils.py  ui_utils.py
comparison_engine/: __init__.py  comparator.py  compare_main.py  compare_utils.py  parser.py  py.typed  student_manager.py  template_manager.py
comparsion_engine/: .gitignore  comparator.py  compare_main.py  compare_utils.py  parser.py  student_manager.py  template_manager.py
config/: commands.json
electron-gui/: commands.html  commands.js  connection.html  connection.js  (+25 more)
electron-gui-student/: commands.js  connection.js  device_setup.html  device_setup.js  directory.html  directory.js  grading.js  index.html  main.js  navbar.html  package-lock.json  package.json  quick_guide.html  renderer.js  results.html  results.js  sample_collect.html  sample_collect.js  system_admin.html  system_admin.js  welcome.html
(+102 files in other folders)
