[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conf-comparison-tool"
version = "0.1.0"
description = "Cisco configuration collection, comparison, and marking backend"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "ICT30018 2026_S1 FYP ConfigSphere Team" }
]
dependencies = [
  "bcrypt>=3.1.7",
  "cffi>=1.14.0",
  "cryptography>=3.3.2",
  "invoke>=1.4.1",
  "markdown-it-py>=1.0.0",
  "mdurl>=0.1.0",
  "netmiko>=3.4.0",
  "ntc_templates>=2.0.0",
  "paramiko>=2.7.2",
  "pycparser>=2.20",
  "Pygments>=2.6.1",
  "PyNaCl>=1.4.0",
  "pyserial>=3.4",
  "PyYAML>=5.3.1",
  "rich>=9.0.0",
  "ruamel.yaml>=0.16.10",
  "ruamel.yaml.clib>=0.2.0",
  "scp>=0.13.0",
  "textfsm>=1.1.0",
  "telnetlib3>=1.1.1",
  "Flask>=3.0.0",
  "Werkzeug>=3.0.0",
  "Jinja2>=3.1.0",
  "itsdangerous>=2.2.0",
  "blinker>=1.9.0",
  "click>=8.1.0",
  "requests>=2.31.0"
]

[project.scripts]
conf-comparison-server = "server:main"

[tool.setuptools]
packages = ["comparison_engine", "config"]
py-modules = [
  "cisco_reset",
  "command_manager",
  "comparison_wrapper",
  "file_utils",
  "generate_results",
  "grade_manager",
  "remote_utils",
  "replug_usb_eth",
  "serial_utils",
  "server"
]

[tool.setuptools.package-data]
comparison_engine = ["py.typed"]
config = ["*.json"]
